Details
-
Bug
-
Status: Closed
-
P2
-
Resolution: Fixed
-
17, 18
Backports
Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
---|---|---|---|---|---|---|
JDK-8270923 | 18 | Roland Westrelin | P2 | Resolved | Fixed | b07 |
JDK-8270922 | 17.0.1 | Roland Westrelin | P2 | Resolved | Fixed | b03 |
Description
To reproduce:
$ java -Xcomp -XX:-TieredCompilation -XX:CompileOnly=Test Test.java
$ java -Xcomp -XX:-TieredCompilation -XX:CompileOnly=Reduced Reduced.java
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/opt/mach5/mesos/work_dir/slaves/35546316-ed70-4084-8244-d672e7734fd1-S57035/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/41fc080c-d2db-43a6-87b0-daa1149175bc/runs/ea6bcc43-d159-4998-ab37-df1970ab9b47/workspace/open/src/hotspot/share/opto/loopnode.cpp:5331), pid=19558, tid=19572
# assert(false) failed: Bad graph detected in build_loop_late
#
# JRE version: Java(TM) SE Runtime Environment (17.0+28) (fastdebug build 17-ea+28-LTS-2534)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 17-ea+28-LTS-2534, compiled mode, sharing, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x1307677] PhaseIdealLoop::build_loop_late_post_work(Node*, bool)+0x307
............
Command Line: -Xmx1G -Xcomp -Xbatch -XX:-TieredCompilation -XX:CompileOnly=Test -XX:CompileCommand=quiet Test
............
Current thread (0x00007f440847fc40): JavaThread "C2 CompilerThread0" daemon [_thread_in_native, id=19572, stack(0x00007f43ec8f8000,0x00007f43ec9f9000)]
Current CompileTask:
C2: 391 5 b Test::vMeth (360 bytes)
Stack: [0x00007f43ec8f8000,0x00007f43ec9f9000], sp=0x00007f43ec9f3310, free space=1004k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x1307677] PhaseIdealLoop::build_loop_late_post_work(Node*, bool)+0x307
V [libjvm.so+0x1307b1a] PhaseIdealLoop::build_loop_late(VectorSet&, Node_List&, Node_Stack&)+0xba
V [libjvm.so+0x1308487] PhaseIdealLoop::build_and_optimize(LoopOptsMode)+0x507
V [libjvm.so+0xa2a6aa] PhaseIdealLoop::optimize(PhaseIterGVN&, LoopOptsMode)+0x2da
V [libjvm.so+0xa26fc5] Compile::Optimize()+0x14f5
V [libjvm.so+0xa28b48] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, bool, bool, DirectiveSet*)+0x1618
V [libjvm.so+0x849aa6] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x646
V [libjvm.so+0xa397a9] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xfb9
V [libjvm.so+0xa3a518] CompileBroker::compiler_thread_loop()+0x5a8
V [libjvm.so+0x18b8251] JavaThread::thread_main_inner()+0x271
V [libjvm.so+0x18bff70] Thread::call_run()+0x100
V [libjvm.so+0x158c7c4] thread_native_entry(Thread*)+0x104
Attachments
Issue Links
- backported by
-
JDK-8270922 C2: assert(false) failed: Bad graph detected in build_loop_late
-
- Resolved
-
-
JDK-8270923 C2: assert(false) failed: Bad graph detected in build_loop_late
-
- Resolved
-
- duplicates
-
JDK-8269797 C2: assert(!in->is_CFG()) failed: CFG Node with no controlling input after JDK-8252372
-
- Closed
-
-
JDK-8270296 C2: Another assert(!had_error) failed: bad dominance
-
- Closed
-
- relates to
-
JDK-8274145 C2: condition incorrectly made redundant with dominating main loop exit condition
-
- Closed
-
-
JDK-8269820 C2 PhaseIdealLoop::do_unroll get wrong opaque node
-
- Resolved
-
-
JDK-8297264 C2: Cast node is not processed again in CCP and keeps a wrong too narrow type which is later replaced by top
-
- Resolved
-
-
JDK-8252372 Check if cloning is required to move loads out of loops in PhaseIdealLoop::split_if_with_blocks_post()
-
- Resolved
-